<resources>
    <string name="app_name">Távcső Vezérlő</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ir_ny_t">Irányító</string>
    <string name="aj_nl">Ajánló</string>
    <string name="h_m_rs_klet">Hőmérséklet</string>
    <string name="el_zm_nyek">Előzmények</string>
    <string name="be_ll_t_sok">Beállítások</string>
    <string name="select">Válassz elemet</string>
    <string name="kamera">Kamera</string>
    <string name="n_vjegy">Névjegy</string>
    <string name="st_k_s_k">Üstökösők</string>
</resources>