<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_control" android:icon="@drawable/baseline_display_settings_24" android:onClick="onGroupItemClick" android:title="@string/ir_ny_t" />
    <item android:id="@+id/nav_recommend" android:icon="@drawable/baseline_star_24" android:onClick="onGroupItemClick" android:title="@string/aj_nl" />
    <item android:id="@+id/nav_comet" android:icon="@drawable/ic_action_name" android:onClick="onGroupItemClick" android:title="@string/st_k_s_k" />
    <item android:id="@+id/nav_photo" android:icon="@drawable/baseline_photo_camera_24" android:onClick="onGroupItemClick" android:title="@string/kamera" />
    <item android:id="@+id/nav_temp" android:icon="@drawable/baseline_auto_graph_24" android:onClick="onGroupItemClick" android:title="@string/h_m_rs_klet" />
    <item android:id="@+id/nav_history" android:icon="@drawable/baseline_history_24" android:onClick="onGroupItemClick" android:title="@string/el_zm_nyek" />
    <item android:id="@+id/nav_settings" android:icon="@drawable/baseline_settings_24" android:onClick="onGroupItemClick" android:title="@string/be_ll_t_sok" />
    <item android:id="@+id/nav_info" android:icon="@drawable/baseline_info_24" android:onClick="onGroupItemClick" android:title="@string/n_vjegy" />
</menu>